deploy/manifests/pds/service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: pds-${VERSIONS_TAG}
  namespace: pxdocs-central
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: pds-${VERSIONS_TAG}
