deploy/manifests/pds/pds-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: pds-ingress
  namespace: pxdocs-pds
spec:
  rules:
  - host: pds.docs.portworx.com
    http:
      paths:
      - backend:
          service:
            name: pds-1-0
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - pds.docs.portworx.com
    secretName: ingress-pxdocs-pds-tls
