deploy/manifests/pds/pxcentral-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: pds-ingress
  namespace: pxdocs-pds
spec:
  rules:
  - host: staging.docs.portworx.com
    http:
      paths:
      - backend:
          serviceName: pds-1-0
          servicePort: 80
        path: /
  tls:
  - hosts:
    - pds.docs.portworx.com
    secretName: ingress-pds-tls
